--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body class="open-sans-normal">
-    <header class="header">
+    <header class="header bg-color">
         <nav>
             <h3 class="nav-title">Ma<span class="text-color">r</span>y</h3>
             <ul>
@@ -32,6 +32,31 @@
 
     </header>
     <main>
+        <section class="about bg-color">
+            <h3 class="title">About Me</h3>
+            <p class="description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional results while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+            <div class="about-items">
+                <!-- .items*4>p.ab-title+p.ab-descrip -->
+                <div class="items">
+                    <p class="ab-title">Name:</p>
+                    <p class="ab-descrip">Mary Hardy</p>
+                </div>
+                <div class="items">
+                    <p class="ab-title">Email:</p>
+                    <p class="ab-descrip">info@gmail.com</p>
+                </div>
+                <div class="items">
+                    <p class="ab-title">Date of birth:</p>
+                    <p class="ab-descrip">11 November 1987</p>
+                </div>
+                <div class="items">
+                    <p class="ab-title">From:</p>
+                    <p class="ab-descrip">Los Angeles, USA</p>
+                </div>
+           
+            </div>
+
+        </section>
 
 
     </main>
