--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </section>
         <section class="skills">
             <h3 class="title center">What I Do</h3>
-            <p class="description center">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+            <p class="description center space">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
             <div class="container">
                 <!-- .skill*4>img+h4.stitle+p.sdesc -->
                 <div class="skill">
@@ -83,6 +83,64 @@
                     <p class="sdesc">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
             </div>
+
+        </section>
+        <section class="resume">
+            <h3 class="title center">A summary of My Resume</h3>
+            <!-- .res-col*2>h3.res-title+.exp*3>h4.exp-title+h5.exp-sub-title+.exp-desc -->
+            <div class="res-cont">
+                <div class="res-col">
+                    <h3 class="res-title">My Education</h3>
+                    <div class="exp">
+                        <h4 class="exp-title">Master in Computer Engineering</h4>
+                        <h5 class="exp-sub-title">Harvard University / 2015 - 2017</h5>
+                        <div class="exp-desc">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                    </div>
+                    <hr class="line">
+                    <div class="exp">
+                        <h4 class="exp-title">Master in Computer Engineering</h4>
+                        <h5 class="exp-sub-title">Harvard University / 2015 - 2017</h5>
+                        <div class="exp-desc">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                    </div>
+                    <hr class="line">
+                    <div class="exp">
+                        <h4 class="exp-title">Master in Computer Engineering</h4>
+                        <h5 class="exp-sub-title">Harvard University / 2015 - 2017</h5>
+                        <div class="exp-desc">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                    </div>
+                </div>
+                <div class="res-col">
+                    <h3 class="res-title">My Experience</h3>
+                    <div class="exp">
+                        <h4 class="exp-title">Sr. Font End Developer</h4>
+                        <h5 class="exp-sub-title">Apple Inc / 2020 - Current</h5>
+                        <div class="exp-desc">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                    </div>
+                    <hr class="line">
+                    <div class="exp">
+                        <h4 class="exp-title">Jr. Font End Developer</h4>
+                        <h5 class="exp-sub-title">Dribbble Inc / 2018 - 2022</h5>
+                        <div class="exp-desc">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                    </div>
+                    <hr class="line">
+                    <div class="exp">
+                        <h4 class="exp-title">HTML Developer</h4>
+                        <h5 class="exp-sub-title">Adobe Inc / 2017 - 2018</h5>
+                        <div class="exp-desc"> List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor. </div>
+                    </div>
+                </div>
+            </div>
+            <div class="center cv">
+                <button class="btn">Download CV</button>
+
+            </div>
+            
 
         </section>
         
