--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@
             <h3 class="title">Let's Connect</h3>
             <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
             <div>
-                <a href=""><img src="images/icons/facebook.png" alt=""></a>
-                <a href=""><img src="images/icons/twitter.png" alt=""></a>
-                <a href=""><img src="images/icons/insta.png" alt=""></a>
+                <a href=""><img class="img-space" src="images/icons/facebook.png" alt=""></a>
+                <a href=""><img class="img-space" src="images/icons/twitter.png" alt=""></a>
+                <a href=""><img class="img-space" src="images/icons/insta.png" alt=""></a>
             </div>
 
         </div>
