--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="ban-content">
                 <h4 class="text1 dark2">Hi, I am</h4>
                 <h1 class="text2">Mary Hardy</h1>
-                <p class="ban-para">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <p class="ban-para">Shot what able cold new see hold.Friendly as an betrayed formerly <br> he. Morning because as to society behaved moments.</p>
                 <button class="btn"> <i class="fa-solid fa-download"></i> Download CV</button>
                 <button class="btnc"><i class="fa-solid fa-phone"></i> Contact</button>
             </div>
